...
    
    override func viewDidLoad() {
        super.viewDidLoad()

        presenter?.viewDidLoad()
        webView.navigationDelegate = self
        webView.accessibilityLabel = "UnsplashWebView"
    }
    
    override func viewDidAppear(_ animated: Bool) {
        super.viewDidAppear(animated)
        // NOTE: Since the class is marked as `final` we don't need to pass a context.
        // In case of inhertiance context must not be nil.
...
