...
    }
    // метод загружает аутлеты
    override func awakeFromNib() {
        super.awakeFromNib()
        addViews()
        constraintView()
        likeButton.accessibilityLabel = "like button"
    }
    
    private func setupView(_ subView: UIView) {
        contentView.addSubview(subView)
        subView.translatesAutoresizingMaskIntoConstraints = false
    }
...
